spade-tests/src/snapshots/spade_tests__linear_check__overlapping_range_indices_are_not_allowed.snap
---
source: spade-tests/src/linear_check.rs
---
entity test() {
    let a = [inst new_mut_wire(), inst new_mut_wire(), inst new_mut_wire()];
    set a[0] = 0u8;
    set a[1] = 0u8;
    set a[2] = 0u8;
    let b = a[0..1];
}


error: Use of consumed resource
  ┌─ testinput:6:13
  │
3 │     set a[0] = 0u8;
  │         ---- Previously used here
  ·
6 │     let b = a[0..1];
  │             ^^^^^^^ Use of consumed resource
