spade-tests/src/snapshots/spade_tests__linear_check__unused_tuple_member_causes_error.snap
---
source: spade-tests/src/linear_check.rs
---
entity x(resource: (inv &bool, &bool)) -> bool {
    true
}


error: resource.0 is unused
  ┌─ testinput:1:10
  │
1 │ entity x(resource: (inv &bool, &bool)) -> bool {
  │          ^^^^^^^^ resource.0 is unused
  │
  = note: resource.0 is an inverted wire (`inv`) which must be set
